--- a/NeuroApp/Storyboard/History/AverageScoreHistory.storyboard
+++ b/NeuroApp/Storyboard/History/AverageScoreHistory.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -36,6 +36,7 @@
                     <connections>
                         <outlet property="tableView" destination="Yih-vD-2bv" id="yJy-uH-aFL"/>
                         <segue destination="iaw-6d-3Ls" kind="show" identifier="ShowPartOneHistory" id="sCJ-lC-tbU"/>
+                        <segue destination="8rT-6g-kqa" kind="show" identifier="ShowPartTwoHistory" id="6fR-dL-YvM"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -56,6 +57,16 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YA2-2x-XQz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="750" y="115"/>
+        </scene>
+        <!--PartTwoHistory-->
+        <scene sceneID="KC6-ig-i6g">
+            <objects>
+                <viewControllerPlaceholder storyboardIdentifier="PartTwoHistoryViewController" storyboardName="PartTwoHistory" id="8rT-6g-kqa" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="SvH-R0-XRc"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0Uj-Lh-8WG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="750" y="181"/>
         </scene>
     </scenes>
     <resources>
