Done export module

--- a/NeuroApp/Storyboard/Tabbar.storyboard
+++ b/NeuroApp/Storyboard/Tabbar.storyboard
@@ -21,6 +21,7 @@
                         <segue destination="A7e-Dv-CLv" kind="relationship" relationship="viewControllers" id="jtb-Zq-MaO"/>
                         <segue destination="XZM-dy-WaZ" kind="relationship" relationship="viewControllers" id="MmR-YO-g3P"/>
                         <segue destination="072-we-LGX" kind="relationship" relationship="viewControllers" id="y5I-m4-fId"/>
+                        <segue destination="QNK-fO-WCf" kind="relationship" relationship="viewControllers" id="dhY-E9-Wku"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2NQ-lL-hwb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -66,6 +67,16 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Rqf-yT-yDu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="438" y="156"/>
+        </scene>
+        <!--Export-->
+        <scene sceneID="l7S-Uh-4Sn">
+            <objects>
+                <viewControllerPlaceholder storyboardIdentifier="Export" storyboardName="Export" id="QNK-fO-WCf" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="NHq-De-Juh"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="b7c-Vd-Fih" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="416" y="247"/>
         </scene>
     </scenes>
 </document>
