--- a/NeuroApp/Presentation/History/PartOneHistory/View/PartOneHistoryTableViewCell/PartOneHistoryTableViewCell.xib
+++ b/NeuroApp/Presentation/History/PartOneHistory/View/PartOneHistoryTableViewCell/PartOneHistoryTableViewCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -20,19 +20,28 @@
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="S3L-rE-aMa">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="79"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="suf-QM-kem">
-                                <rect key="frame" x="0.0" y="0.0" width="51.5" height="34.5"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="suf-QM-kem">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="34.5"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="07C-2C-6BC">
-                                <rect key="frame" x="0.0" y="44.5" width="48" height="34.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="07C-2C-6BC">
+                                <rect key="frame" x="0.0" y="44.5" width="310" height="34.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="suf-QM-kem" secondAttribute="trailing" id="6nc-uH-Tki"/>
+                            <constraint firstAttribute="trailing" secondItem="07C-2C-6BC" secondAttribute="trailing" constant="10" id="9ga-zE-0rL"/>
+                            <constraint firstAttribute="bottom" secondItem="07C-2C-6BC" secondAttribute="bottom" id="B64-ln-5Bs"/>
+                            <constraint firstItem="07C-2C-6BC" firstAttribute="leading" secondItem="S3L-rE-aMa" secondAttribute="leading" id="HhI-Pv-2TO"/>
+                            <constraint firstItem="suf-QM-kem" firstAttribute="leading" secondItem="S3L-rE-aMa" secondAttribute="leading" id="hcH-sT-Ma3"/>
+                            <constraint firstItem="suf-QM-kem" firstAttribute="top" secondItem="S3L-rE-aMa" secondAttribute="top" id="ngG-oe-0Nx"/>
+                            <constraint firstItem="07C-2C-6BC" firstAttribute="top" secondItem="suf-QM-kem" secondAttribute="bottom" constant="10" id="spG-8A-AkG"/>
+                        </constraints>
                     </stackView>
                 </subviews>
                 <constraints>
